crates/lash-protocol-rlm/src/native/snapshots/lash_protocol_rlm__native__tests__cell_finish_prose.snap
---
source: crates/lash-protocol-rlm/src/native/tests.rs
expression: "serde_json::to_string_pretty(&request.messages).unwrap()"
---
[
  {
    "role": "Assistant",
    "blocks": [
      {
        "Text": {
          "text": "answer",
          "response_meta": null,
          "cache_breakpoint": false
        }
      }
    ]
  },
  {
    "role": "System",
    "blocks": [
      {
        "Text": {
          "text": "No code from that response executed. Markdown code fences do not execute here. Resend the needed program between `<typescript>` and `</typescript>` on their own lines, without backticks. Call `finish(value)` inside a paired `<typescript>...</typescript>` block when the task is complete. Use `finish(null)` only when null is intentional.",
          "response_meta": null,
          "cache_breakpoint": true
        }
      }
    ]
  },
  {
    "role": "User",
    "blocks": [
      {
        "Text": {
          "text": "\n\n\n=== CURRENT ITERATION: 2 ===",
          "response_meta": null,
          "cache_breakpoint": false
        }
      }
    ]
  }
]
