crates/lash-protocol-rlm/src/native/snapshots/lash_protocol_rlm__native__tests__cell_natural_error.snap
---
source: crates/lash-protocol-rlm/src/native/tests.rs
expression: "serde_json::to_string_pretty(&request.messages).unwrap()"
---
[
  {
    "role": "Assistant",
    "blocks": [
      {
        "Text": {
          "text": "<typescript>\nfinish(1);\n</typescript>",
          "response_meta": null,
          "cache_breakpoint": false
        }
      }
    ]
  },
  {
    "role": "User",
    "blocks": [
      {
        "Text": {
          "text": "runtime error\n\nNext: the host failed while handling this cell. Retry it; if the failure persists, report the host problem.",
          "response_meta": null,
          "cache_breakpoint": true
        }
      }
    ]
  },
  {
    "role": "User",
    "blocks": [
      {
        "Text": {
          "text": "\n\n\n=== CURRENT ITERATION: 2 ===\n\n\n=== BOUND VARIABLES ===\n\n- `history`: `HistoryItem[]`, read-only, 1 entry\n\nSchema:\ntype HistoryItem = { kind: \"message\"; id: string; role: \"user\" | \"system\" | \"assistant\" | \"event\"; content: string; attachments?: Array<{ id: string; source: string; reference: string; label?: string | null; media_type?: string | null }> } | { kind: \"lashlang_step\"; id: string; protocol_iteration: number; code: string; output: Array<unknown>; calls?: Array<{ operation: string; outcome: \"ok\" | \"err\" }>; calls_omitted?: number; error?: { kind: \"policy\" | \"program\" | \"host\"; message: string } | null; final_output?: unknown | null; images?: Array<{ id: string; media_type: string; bytes: number; height?: number | null; label?: string | null; width?: number | null }>; output_archive?: { $lash_history_value: \"retained\"; witness: string; byte_len: number; attachment: unknown } | null }\n\n\n=== FINALIZATION ===\n\nNatural termination: prose alone ends this turn as the final answer, so write prose only when no work remains; otherwise perform the next step in a block. Prefer prose for the final answer. Call `finish(value)` inside the program only when the answer is a value the program built for this request, never to hand back a tool's raw result.",
          "response_meta": null,
          "cache_breakpoint": false
        }
      }
    ]
  }
]
