crates/lash-protocol-rlm/src/native/snapshots/lash_protocol_rlm__native__tests__cell_output_limit_prose.snap
---
source: crates/lash-protocol-rlm/src/native/tests.rs
expression: "serde_json::to_string_pretty(&request.messages).unwrap()"
---
[
  {
    "role": "Assistant",
    "blocks": [
      {
        "Text": {
          "text": "partial answer",
          "response_meta": null,
          "cache_breakpoint": false
        }
      }
    ]
  },
  {
    "role": "System",
    "blocks": [
      {
        "Text": {
          "text": "Your answer was cut off by the output limit — retry with a shorter answer. Do less per cell and continue in a later step.",
          "response_meta": null,
          "cache_breakpoint": true
        }
      }
    ]
  },
  {
    "role": "User",
    "blocks": [
      {
        "Text": {
          "text": "\n\n\n=== CURRENT ITERATION: 2 ===",
          "response_meta": null,
          "cache_breakpoint": false
        }
      }
    ]
  }
]
