crates/lash-protocol-rlm/src/native/snapshots/lash_protocol_rlm__native__tests__cell_schema_error.snap
---
source: crates/lash-protocol-rlm/src/native/tests.rs
expression: "serde_json::to_string_pretty(&request.messages).unwrap()"
---
[
  {
    "role": "Assistant",
    "blocks": [
      {
        "Text": {
          "text": "<typescript>\nfinish(1);\n</typescript>",
          "response_meta": null,
          "cache_breakpoint": false
        }
      }
    ]
  },
  {
    "role": "User",
    "blocks": [
      {
        "Text": {
          "text": "runtime error\n\nNext: the host failed while handling this cell. Retry it; if the failure persists, report the host problem.",
          "response_meta": null,
          "cache_breakpoint": true
        }
      }
    ]
  },
  {
    "role": "User",
    "blocks": [
      {
        "Text": {
          "text": "\n\n\n=== CURRENT ITERATION: 2 ===\n\n\n=== BOUND VARIABLES ===\n\n- `history`: `HistoryItem[]`, read-only, 1 entry\n\nSchema:\ntype HistoryItem = { kind: \"message\"; id: string; role: \"user\" | \"system\" | \"assistant\" | \"event\"; content: string; attachments?: Array<{ id: string; source: string; reference: string; label?: string | null; media_type?: string | null }> } | { kind: \"lashlang_step\"; id: string; protocol_iteration: number; code: string; output: Array<unknown>; calls?: Array<{ operation: string; outcome: \"ok\" | \"err\" }>; calls_omitted?: number; error?: { kind: \"policy\" | \"program\" | \"host\"; message: string } | null; final_output?: unknown | null; images?: Array<{ id: string; media_type: string; bytes: number; height?: number | null; label?: string | null; width?: number | null }>; output_archive?: { $lash_history_value: \"retained\"; witness: string; byte_len: number; attachment: unknown } | null }\n\n\n=== FINALIZATION ===\n\nFinish-required: prose alone never ends this turn. Every response, including the last, acts inside a paired `<typescript>...</typescript>` block. Do not call `finish(value)` until the answer is in hand; the final response's block calls `finish(value)` (`finish(null)` only when null is the answer). Never announce an action without the block that performs it. The value must match the REQUIRED OUTPUT contract.\n\n=== REQUIRED OUTPUT ===\n\nstring",
          "response_meta": null,
          "cache_breakpoint": false
        }
      }
    ]
  }
]
